sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: value etat is not a member of object Boolean
  Boolean etat=true;
          ^AlgBubbleSort1:4: error: not found: value etat
  while(etat==false){
        ^AlgBubbleSort1:5: error: not found: value etat
    etat=false;
    ^AlgBubbleSort1:9: error: not found: value etat
        etat=true;
        ^